<resources>
    <!--  App   -->
    <string name="app_name">Lucre</string>
    <string name="menu_addButton">Add</string>
    <string name="menu_cancelButton">Cancel</string>
    <string name="item_add">Create</string>
    <string name="item_edit">Update</string>
    <string name="item_delete">Delete</string>

    <!--  Login  -->
    <string name="login_username">Email</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="login_forgot">Forgot Password?</string>
    <string name="login_signup">Sign up</string>
    <string name="login_login">Already have an account? Sign in</string>
    <string name="login_reset">Reset Password</string>
    <string name="login_cancel">Cancel</string>

    <!--  Register  -->
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Confirm Password</string>
    <string name="register">Register</string>

    <!--  Vault  -->
    <string name="vault_name">Enter a name</string>
    <string name="vault_description">Enter a description</string>
    <string name="vault_currency">Enter a currency</string>
    <string name="add_vault">Add vault</string>
    <string name="edit_vault">Edit vault</string>
    <string name="delete_vault">Delete vault</string>
    <string name="cancel">Cancel</string>
    <string name="select_vault">Select vault</string>

    <!-- Entry   -->
    <string name="entry_amount">Enter an amount</string>
    <string name="entry_type">Enter an entry type</string>
    <string name="entry_vendor">Enter seller name</string>
    <string name="entry_description">Enter a description</string>
    <string name="entry_category">Enter a category name</string>
    <string name="entry_date">Enter a date</string>
    <string name="entry_add_image"> Add Image </string>
    <string name="entry_edit_image"> Change Image </string>
    <string name="select_entry_image">Select receipt</string>
    <string name="set_entry_location">Set Location</string>
    <string name="entry_receipt">Receipt</string>
    <string name="entry_list_title">Transactions</string>

    <!--  Category  -->
    <string name="category_name">Enter an name</string>
    <string name="categroy_description">Enter a description type</string>

    <!--  Validation  -->
    <string name="required">This field is required</string>
    <string name="email">Please enter a valid email</string>
    <string name="length">Password should be atleast 6 characters</string>
    <string name="match">Passwords must match</string>

    <!--  Other  -->
    <string name="title_activity_maps">Map</string>

    <!-- Dashboard -->
    <string name="dashboard_hello">Hello,</string>
    <string name="dashboard_world" />
    <string name="dashboard_vault" />
    <string name="show_transactions">Show Transactions</string>

</resources>