<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <TextView
        android:id="@+id/banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/login_username"
        android:inputType="text"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/polar"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/banner"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="8dp"
        android:autofillHints=""
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:maxLength="25"
        android:maxLines="1"
        android:padding="8dp"
        android:textColor="@color/polar"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/aqua_dark"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/login"
        android:textColor="@color/snow"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="60dp"
        android:text="@string/login_forgot"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="90dp"
        android:text="@string/login_signup"
        app:layout_constraintTop_toTopOf="@id/reset"
        app:layout_constraintLeft_toRightOf="@id/reset"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>