<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.entry.EntryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/polar"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/entryAddToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/appBarLayout"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/entryAmount"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/entry_amount"
                    android:inputType="numberDecimal"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/polar"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/entryType"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/entry_type"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.498" />

                <EditText
                    android:id="@+id/entryVendor"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/entry_vendor"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/polar"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/entryDescription"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/entry_description"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/polar"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/entryCategory"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/entry_category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.498" />

                <ImageView
                    android:id="@+id/entryImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@mipmap/ic_launcher"/>

                <Button
                    android:id="@+id/entryImageButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/aqua_dark"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/entry_add_image"
                    android:textColor="@color/snow"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/entryLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/aqua_dark"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/set_entry_location"
                    android:textColor="@color/snow"
                    android:textSize="16sp"/>

                <Button
                    android:id="@+id/entrySubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/aqua"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/item_add"
                    android:textColor="@color/snow"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>