<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.vault.VaultCardFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:elevation="24dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <TextView
                    android:id="@+id/menuButton"
                    android:drawableEnd="@drawable/ic_baseline_more_vert_24"
                    android:layout_alignParentTop="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <FrameLayout
                    android:id="@+id/chartFragmentContainer"
                    android:layout_below="@+id/menuButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/dashboardBalance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_below="@+id/chartFragmentContainer"
                    android:text="@string/add_vault"
                    app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_24" />

                <TextView
                    android:id="@+id/dashboardVault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_below="@+id/dashboardBalance"
                    android:text="@string/dashboard_vault" />

                <TextView
                    android:id="@+id/dashboardTransactions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:text="@string/show_transactions"
                    android:visibility="gone"
                    android:layout_below="@+id/dashboardVault"/>
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>