<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.category.CategoryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/categoryName"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/vault_name"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/polar"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/categoryDescription"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="8dp"
                    android:autofillHints=""
                    android:hint="@string/vault_description"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/polar"
                    android:textSize="14sp" />

                <com.skydoves.colorpickerview.ColorPickerView
                    app:debounceDuration="150"
                    android:id="@+id/colorPickerView"
                    android:layout_gravity="center"
                    android:layout_width="300dp"
                    android:layout_height="300dp" />

                <TextView
                    android:layout_gravity="center"
                    android:id="@+id/categoryColor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/categorySubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="@color/aqua"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:stateListAnimator="@null"
                    android:text="@string/item_add"
                    android:textColor="@color/snow"
                    android:textSize="16sp" />

            </LinearLayout>
        </ScrollView>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>